:pushpin: Adicionando funcionalidade de descrição sobre as funcionalidades

--- a/templates/base/infosistema.html
+++ b/templates/base/infosistema.html
@@ -7,8 +7,170 @@
         }
     </style>
     <div class="container">
+        <div class="mt-3">
+            <h2>Funcionalidades do sistema.</h2>
+        </div>
         <div class="text-justify">
-            O sistema está na varsão: Ínicio - 07/2024
+            <b>Versão do sistema:</b> Versão 1.0 - Beta
+        </div>
+        <div>
+            <table class="table table-bordered border-success text-center">
+                <thead>
+                    <tr>
+                        <th scope="col">Funcionalidades</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Descrição</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Visualizar Empresa</th>
+                        <td>Disponível</td>
+                        <td>
+                            Essa funcionalidade surge a partir do cadastro da empresa. Toda empresa cadastrada terá a opção de visualizar informações sobre sua própria organização e seus colaboradores. 
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Editar Empresa</th>
+                        <td>Disponível</td>
+                        <td>
+                            Toda empresa cadastrada terá a opção de visualizar e editar informações sobre sua própria organização e seus colaboradores. 
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Cadastrar Colaborador</th>
+                        <td>Disponível</td>
+                        <td>
+                            Funcionalidade disponível para o dono da loja, permitindo o cadastro de novos colaboradores.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Listar Colaborador</th>
+                        <td>Disponível</td>
+                        <td>
+                            Funcionalidade disponível para o dono da loja, permitindo visualizar a listagem de colaboradores.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Cadastrar Estoque</th>
+                        <td>Disponível</td>
+                        <td>
+                            Permite adicionar e organizar itens no estoque da sua empresa, facilitando o controle e a gestão de inventário.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Cadastrar Produto</th>
+                        <td>Disponível</td>
+                        <td>
+                            Facilita a adição de novos produtos ao sistema, com todas as informações necessárias, como descrição, preço e quantidade.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Produtos Disponíveis</th>
+                        <td>Disponível</td>
+                        <td>
+                            Exibe uma lista de produtos que estão em estoque e prontos para venda, ajudando a monitorar a disponibilidade em tempo real.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Produtos Indisponiveis</th>
+                        <td>Disponível</td>
+                        <td>
+                            Mostra os produtos que estão fora de estoque, permitindo uma rápida identificação e reposição dos itens necessários.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Cadastrar Meta</th>
+                        <td>Disponível</td>
+                        <td>
+                            Permite definir metas de vendas para períodos específicos, ajudando a alinhar os objetivos da equipe e acompanhar o desempenho.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Listar Metas</th>
+                        <td>Disponível</td>
+                        <td>
+                            Exibe todas as metas cadastradas, facilitando o monitoramento do progresso e a avaliação dos resultados ao longo do período de vendas.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Cadastrar Pedido</th>
+                        <td>Disponível</td>
+                        <td>
+                            Permite registrar pedidos de clientes que não encontraram o item desejado na loja, facilitando o acompanhamento e a realização de pedidos especiais.
+                        </td>
+                    </tr>   
+                    <tr>
+                        <th scope="row">Listar Pedidos</th>
+                        <td>Disponível</td>
+                        <td>
+                            Exibe todos os pedidos feitos por clientes, ajudando a monitorar o status de cada pedido e garantindo um melhor atendimento ao cliente.
+                        </td>
+                    </tr>   
+                    <tr>
+                        <th scope="row">Listar Pedidos</th>
+                        <td>Disponível</td>
+                        <td>
+                            Exibe todos os pedidos feitos por clientes, ajudando a monitorar o status de cada pedido e garantindo um melhor atendimento ao cliente.
+                        </td>
+                    </tr> 
+                    <tr>
+                        <th scope="row">Editar Pedido</th>
+                        <td>Disponível</td>
+                        <td>
+                            Permite editar pedidos de clientes que não encontraram o item desejado na loja, facilitando o acompanhamento e a realização de pedidos especiais.
+                        </td>
+                    </tr> 
+                    <tr>
+                        <th scope="row">Cadastrar Clientes</th>
+                        <td>Disponível</td>
+                        <td>
+                            Permite adicionar novos clientes ao sistema, armazenando informações importantes para facilitar o gerenciamento do relacionamento com o cliente.
+                        </td>
+                    </tr>    
+                    <tr>
+                        <th scope="row">Listar Clientes</th>
+                        <td>Disponível</td>
+                        <td>
+                            Exibe uma lista completa de todos os clientes cadastrados, permitindo fácil acesso e consulta às informações de cada cliente.
+                        </td>
+                    </tr>  
+                    <tr>
+                        <th scope="row">Clientes Aniversariantes</th>
+                        <td>Disponível</td>
+                        <td>
+                            Mostra uma lista de clientes que estão fazendo aniversário, ajudando a empresa a enviar mensagens de felicitações e promover um melhor relacionamento.
+                        </td>
+                    </tr>    
+                    <tr>
+                        <th scope="row">Cadastrar Clientes</th>
+                        <td>Disponível</td>
+                        <td>
+                            Permite adicionar novos clientes ao sistema, armazenando informações importantes para facilitar o gerenciamento do relacionamento com o cliente.
+                        </td>
+                    </tr>  
+                    <tr>
+                        <th scope="row">Cadastro de Venda</th>
+                        <td>Disponível</td>
+                        <td>
+                            Permite adicionar novos clientes ao sistema, armazenando informações importantes para facilitar o gerenciamento do relacionamento com o cliente.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Ver maiores detalhes sobre as vendas</th>
+                        <td>Disponível</td>
+                        <td>
+                            Permitir visualizar informações detalhadas sobre cada venda realizada, incluindo produtos vendidos, quantidades, valores, data da venda e informações do cliente, facilitando o acompanhamento e a análise do desempenho de vendas.
+                        </td>
+                    </tr>                                                                                                                                          <tr>
+                        <th scope="row">Personalizar layout da empresa.</th>
+                        <td>Disponível</td>
+                        <td>
+                            Permite que cada empresa customize o layout do sistema conforme suas preferências, ajustando cores, logos e outros elementos visuais para refletir sua identidade corporativa.
+                        </td>
+                    </tr>                    
+                </tbody>
+            </table>
         </div>       
     </div>
 
