--- a/templates/base/inicio.html
+++ b/templates/base/inicio.html
@@ -15,17 +15,17 @@
                     </div>
                     <h4 class="cor mt-4">Comece Hoje Mesmo!</h4>
                     <h6>
-                        Transforme a gestão do seu negócio com Athenis. Aumente a eficiência, reduza custos e melhore a experiência do cliente. 
+                        Transforme a gestão do seu negócio com Afrodite. Aumente a eficiência, reduza custos e melhore a experiência do cliente. 
                     </h6>
                     <h6>Solicite uma demonstração gratuita e veja como podemos ajudar sua loja a prosperar.</h6> 
                     <h6>Quer saber mais sobre nosso serviço?  Clique <a href="{% url 'infosistema' %}">aqui</a></h6>
                 </div>
                 <div class="col-12 col-md-6 col-sm-12">
-                    <h5>Athenis - Seu Parceiro Ideal para o Controle de Estoque e Gerenciamento de Loja.</h5>
+                    <h5>Afrodite - Seu Parceiro Ideal para o Controle de Estoque e Gerenciamento de Loja.</h5>
                     <br>
                     <h4 class="cor">Otimize sua Gestão de Estoque e Melhore a Eficiência da sua Loja</h4>
                     <br>
-                    <p>No competitivo mercado atual, a eficiência no gerenciamento de estoque e o controle preciso das operações da loja são essenciais para o sucesso. Pensando nisso, apresentamos o Athenis, uma solução completa e intuitiva para o controle de estoque e gerenciamento de lojas, projetada para atender às necessidades de negócios de todos os tamanhos.</p>
+                    <p>No competitivo mercado atual, a eficiência no gerenciamento de estoque e o controle preciso das operações da loja são essenciais para o sucesso. Pensando nisso, apresentamos o Afrodite, uma solução completa e intuitiva para o controle de estoque e gerenciamento de lojas, projetada para atender às necessidades de negócios de todos os tamanhos.</p>
                     <br>
                     <h5>Funcionalidades</h5>
                     <p>
