--- a/templates/users/cliente/lista_clientes.html
+++ b/templates/users/cliente/lista_clientes.html
@@ -28,7 +28,8 @@
                     <td>{{ cliente.data_aniversario }}</td>
                     <td>{{ cliente.telefone_celular }}</td>
                     <td>
-                        <a href="{% url 'editar_cliente' cliente.pk %}" class="btn btn-primary">Editar</a>                         
+                        <a href="{% url 'editar_cliente' cliente.pk %}" class="btn btn-primary">Editar</a>
+                        <a href="{% url 'detalhe_cliente' cliente.pk %}" class="btn btn-success">Detalhes</a>                         
                     </td>
                 </tr>
                 {% endfor %}
