--- a/templates/core/valepresente/listar.html
+++ b/templates/core/valepresente/listar.html
@@ -23,7 +23,7 @@
             </thead>
             <tbody>
                 {% for vale in vales %}
-                <tr>
+                <tr {% if vale.status == 'pendente' %}class="table-danger"{% endif %}>
                     <td>{{ vale.id }}</td>
                     {% if vale.cliente_nome %}
                         <td>{{ vale.cliente_nome }}</td>
@@ -46,25 +46,30 @@
                             <div class="modal-dialog modal-xl">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Informações sobre o vale: '{{vale.pk}}'</h1>
+                                        <h1 class="modal-title fs-5 text-light" id="staticBackdropLabel">Informações sobre o vale: '{{vale.pk}}'</h1>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <h6 class="text-danger fst-italic">Informações sobre o cliente comprador:</h6>
+                                        {% if vale.status == 'pendente' %}
+                                            <div class="alert alert-danger" role="alert">
+                                                Vale em aberto!
+                                            </div>
+                                        {% endif %}
+                                        <h6 class="text-danger-emphasis fst-italic">Informações sobre o cliente comprador:</h6>
                                         <ul class="list-group mt-4">
                                             <li class="list-group-item"><b>Nome do Cliente Comprador:</b> {{vale.cliente_nome|default:"-"}}</li>
                                             <li class="list-group-item"><b>Cliente Comprador:</b> {{vale.cliente|default:"-"}}</li>
                                             <li class="list-group-item"><b>Telefone:</b> {{vale.cliente_telefone|default:"-"}}</li>
                                             <li class="list-group-item"><b>E-mail:</b> {{vale.cliente_email|default:"-"}}</li>
                                         </ul>
-                                        <h6 class="text-danger fst-italic mt-3">Informações sobre o cliente ganhador:</h6>
+                                        <h6 class="text-danger-emphasis fst-italic mt-3">Informações sobre o cliente ganhador:</h6>
                                         <ul class="list-group mt-4">
                                             <li class="list-group-item"><b>Nome do Cliente Ganhador:</b> {{vale.cliente_ganhador_nome|default:"-"}}</li>
                                             <li class="list-group-item"><b>Cliente Ganhador:</b> {{vale.cliente_ganhador|default:"-"}}</li>
                                             <li class="list-group-item"><b>Telefone:</b> {{vale.cliente_ganhador_telefone|default:"-"}}</li>
                                             <li class="list-group-item"><b>E-mail:</b> {{vale.cliente_email_cliente_ganhador|default:"-"}}</li>
                                         </ul>
-                                        <h6 class="text-danger fst-italic mt-3">Informações gerais:</h6>
+                                        <h6 class="text-danger-emphasis fst-italic mt-3">Informações gerais:</h6>
                                         <ul class="list-group mt-4">
                                             <li class="list-group-item"><b>Vendedor:</b> {{vale.vendedor|default:"-"}}</li>
                                             <li class="list-group-item"><b>Data da compra:</b> {{vale.data_pedido|default:"-"}}</li>
