--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -229,6 +229,25 @@
                         <ul class="list-group">
                             <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'cadastrar_estoque' %}">Cadastrar Estoque</a>
                         </ul>
+                        <h6 class="mt-3">Produto</h6>
+                        <ul class="list-group">
+                            <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'cadastrar_tamanho' %}">Cadastrar Tamanho de Produto</a>
+                        </ul>
+                        <ul class="list-group">
+                            <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'listar_tamanho' %}">Lista de Tamanho</a>
+                        </ul>
+                        <ul class="list-group">
+                            <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'tipo_produto_criar' %}">Cadastrar Tipo de Produto</a>
+                        </ul>
+                        <ul class="list-group">
+                            <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'listar_tipos_de_produtos' %}">Listar Tipo de Produto</a>
+                        </ul>
+                        <ul class="list-group">
+                            <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'cadastrar_marca' %}">Cadastrar Marca</a>
+                        </ul>
+                        <ul class="list-group">
+                            <a class="list-group-item list-group-item-action" aria-current="page" href="{% url 'listar_marcas' %}">Listar Marcas</a>
+                        </ul>
                         <h6 class="mt-3">Colaborador</h6>
                         <ul class="list-group">
                             <a class="list-group-item list-group-item-action" href="{% url 'cadastrar_usuario' %}">Cadastrar Colaborador</a>
